@@ -4,6 +4,7 @@
 * Update - WordPress 6.9 compatible.
 * Update - WooCommerce 10.4 compatible.
 * Fix - [CVE-2026-0549] Prevent potential stored XSS via shortcode.
+* Dev - Replaced uses of parse_url() with wp_parse_url().
 * Update - The [groups_group_info] shows user display_name instead of user_login when listing users and supports the none attribute.
 
 2026-01-05 - version 3.10.0
